# qslog

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  miscBenchmark.cpp  qslogBenchmark.cpp
cmake/: module_define.cmake
docs/: design.md
docs/benchmark/: benchmark_result.md  perf.data
examples/: CMakeLists.txt  example.cpp  qslogExample.cpp  serializeExample.cpp
scripts/: format.sh  pre-commit  run_benchmark.sh
src/: BaseSink.cpp  CMakeLists.txt  CompressFileSink.cpp  FileSink.cpp  FileUtils.cpp  FormatIdManager.cpp  FormatIdManager.h  LogEntry.cpp  Logger.cpp  OSUtils.cpp  OSUtils.h  StdoutSink.cpp  common.cpp
src/api/: CompressFileSink.cpp  FileSink.cpp  LogEntry.cpp  Logger.cpp  MmapSink.cpp  StdoutSink.cpp  common.cpp
src/api/include/qslog/: BaseSink.h  CompressFileSink.h  FileSink.h  LogEntry.h  Logger.h  MmapSink.h  StdoutSink.h  common.h
src/decompress/: CMakeLists.txt  LogDecompressor.cpp  LogDecompressor.h  decompress.cpp
src/include/qslog/: BaseSink.h  CompressFileSink.h  FileUtils.h  LogEntry.h  Logger.h  OSUtils.h  StdoutSink.h  common.h  tscns.h
tests/: CMakeLists.txt  testOSUtils.cpp
